grafana/gateway.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: grafana-ingress-gateway
  namespace: istio-system
spec:
  selector:
    app: istio-ingressgateway
    istio: ingressgateway 
  servers:
    - port:
        number: 15021
        name: http-grafana
        protocol: HTTP
      hosts:
        - "*"
