grafana/virtualservice.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana-istio-virtualservice
  namespace: istio-system
spec:
  hosts:
    - "*" 
  gateways:
    - grafana-ingress-gateway
  http:
    - match:
        - port: 15021
      route:
        - destination:
            host: grafana.istio-system.svc.cluster.local
            port:
              number: 3000
